# eu-subsidies-beneficiaries

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  README.txt  make_charts.py  match_companies.py  my_companies.csv  pyproject.toml  requirements.txt  run_pipeline.py
data/: README.txt  test_companies_20.csv
data/data_figures/: README.txt
data/processed/: README.txt
data/raw/: README.txt
data/reference/: ipcei_overview.csv  ipcei_participants.csv
examples/automotive/: build_company_list.py  config.py  consolidation.py  presentation_charts.py
notebooks/: README.txt
research/: MATCHING_GUIDE.md  METHODOLOGY.md  MORNING_REPORT_2026-04-14.md  NOTES_A11_entity_name_clean.md  PIPELINE_AUDIT.md  README.txt  TIER1_BEFORE_AFTER_REPORT.md
research/methodology/: README.txt
research/presentations/: README.txt
research/validation/: sa_adhoc_v2_20pdf_seed42.json
scripts/: launch_overnight_eib.py  tier1_compare_baseline_improved.py  validate_sa_adhoc_extraction.py
src/: README.txt  match_companies.py  paths.py
src/analysis/: facility_subsidy_intensity.py
src/data_cleaning/: README.txt
src/data_extraction/: README.txt
src/enrichment/: __init__.py  cordis_api_backfill.py  cordis_enrichment.py  eib_deep_scraper.py  eib_promoter_scraper.py  ets_free_allocation.py  extras_enrichers.py  fts_cordis_bridge.py  fts_deep_mining.py  highvalue_forensics.py  ipcei_reference.py  sa_case_lookup.py  sa_pdf_parser.py
src/harmonization/: __init__.py  cinea.py  ebrd.py  esif_2027.py  (+9 more)
tools/: gold_set_sample.py  matcher_report.py  top_entity_report.py
(+45 files in other folders)
